--- a/des157/styles.css
+++ b/des157/styles.css
@@ -137,6 +137,23 @@ footer {
 /*** media ***/
 @media (max-width: 599px) {
 
+    header section {
+        display: block;
+    }
+
+    #name {
+        font-family: 'Cormorant Garamond', serif;
+        font-weight: 400;
+        font-size: 30px;
+    }
+    
+    section h2 {
+        font-family: 'Cormorant Garamond', serif;
+        font-weight: 300;
+        font-size: 20px;
+        margin-top: 10px;
+    }
+
     #banner {
         width: 100%;
         height: 150px;
