--- a/des157/studio1/styles.css
+++ b/des157/studio1/styles.css
@@ -123,32 +123,57 @@ input{
     background-color:blanchedalmond;
     border: 30px solid burlywood;
 
-    height: 400px;
-    width: 500px;
-    padding-top: 30px;
-    padding: 20px;
+    height: 330px;
+    width: 460px;
+    padding: 40px;
+    padding-top: 60px;
 
     position: relative;
     margin: auto;
     margin-top: 200px;
     margin-bottom: 50px;
     z-index: 3;
+
+    text-align: center;
+    font-size: 25px;
 }
 
 
-/* bottom thing that prob will become button */
-div {
-    width: 300px;
-    margin: auto;
+/* button */
 
-    margin-bottom: 50px;
-}
+#toTop {
 
-#upButton {
+    background-color: indianred;
+    color: ivory;
+
 
     padding: 10px;
+    width: 200px;
+    margin: auto;
+    margin-top: 20px;
+
+    text-align: center;
     position: relative;
 
     bottom: 30px;
     z-index: 4;
+}
+
+#toTop:hover {
+    background-color: crimson;
+    color: ivory;
+}
+
+
+/* footer */
+footer {
+    background-color: burlywood;
+    text-align: center;
+
+    padding: 10px;
+}
+
+footer a {
+    position: relative;
+    z-index: 5;
 }
