--- a/des157/final/finalproject/style.css
+++ b/des157/final/finalproject/style.css
@@ -181,8 +181,14 @@ p {
 
 /* footer */
 footer {
-    text-align: center;
+    display: flex;
+    justify-content: space-evenly;
 
-    margin: 20px;
+    margin-top: 100px;
 
+    background-color: rgb(149, 187, 231);
+
+    padding: 20px;
+    padding-right: 200px;
+    padding-left: 200px;
 }
