--- a/styles.css
+++ b/styles.css
@@ -151,6 +151,7 @@ main {
 /*********/
 #titleDiv {
     display: inline;
+    position: relative;
 }
 
 #title {
@@ -174,11 +175,29 @@ main {
     margin-top: 15px;
 }
 
+#pfp {
+    display: block;
+    position: absolute;
+
+    top: 88px;
+    left: 50px;
+    width: 250px;
+
+    z-index: -5;
+}
+
 #profile {
     display: block;
     margin: 25px;
     width: 300px;
+
+    transition: 1s all;
 }
+
+#profile:hover {
+    opacity: 0;
+}
+
 
 /*********/
 /* contact */
